--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Admin page </title>
+  <title>Admin Panel </title>
 </head>
 
 <body>
-  <noscript>Basic Admin Page.</noscript>
+  <noscript>Basic Admin Panel...</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
